--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".MyApplication"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -26,7 +27,7 @@
 
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/front_page_label"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
