--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext {
+        glide_version = '4.11.0'
+        hilt_version = '2.28.3-alpha'
+        hilt_viewmodel_version = '1.0.0-alpha02'
+        kotlin_version = '1.3.72'
+        lifecycle_version = '2.2.0'
+        navigation_version = '2.3.0'
+        retrofit_version = '2.9.0'
+        room_version = '2.2.5'
+        rxandroid_version = '2.1.0'
+        rxjava_version = '2.2.9'
+        timber_version = '4.7.1'
+    }
+
+
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.2.2'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
